# backend

./: .codacy.yml  .coveragerc  .editorconfig  .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docker-publish.yml  lint.yml
backend/: gunicorn.conf.py  manage.py
backend/analytics/: admin.py  dashboard.py  tasks.py
backend/analytics/api/: serializer.py  urls.py  viewsets.py
backend/analytics/migrations/: 0001_initial.py  0002_appstatistic_material_count.py  0003_appstatistic_cx_count_delta_and_more.py  0004_analyticsplanaggregate.py  0005_analyticsempirematerialsnapshot.py  0006_rename_prunplanner_materia_62060a_idx_idx_material_ticker_delta_and_more.py
backend/analytics/models/: __init__.py  app_statistics.py  empire_material_snapshot.py  plan_aggregates.py
backend/analytics/services/: PlanInsightAggregatorService.py  analytics_cache_manager.py  planinsight_aggregator_service.py
backend/api/: mixins.py  renderers.py  serializer.py  urls.py  views.py
backend/core/: admin.py  asgi.py  celery.py  env.py  models.py  urls.py  wsgi.py
backend/core/services/: cache_manager.py
backend/gamedata/: apps.py  gamedata_cache_manager.py  signals.py  tasks.py
backend/gamedata/admin/: __init__.py  game_building_admin.py  game_exchange_admin.py  game_material_admin.py  game_planet_admin.py  game_playerdata_admin.py  game_recipe_admin.py
backend/gamedata/api/: serializer.py  sse.py  urls.py  viewsets.py
backend/gamedata/fio/: importers.py  services.py
backend/gamedata/migrations/: 0001_initial.py  0002_gameexchangesnapshot.py  0003_gameexchangesummary.py  0004_gameexchangesnapshot_traded_and_more.py  0005_gameexchangeanalytics_gameexchangecxpc_and_more.py  0017_gamebuilding_building_type.py  (+14 more)
backend/legacy_migration/: apps.py  db_router.py
backend/planning/: admin.py  apps.py  models.py  planning_cache_manager.py  signals.py
backend/tests/: conftest.py
backend/user/: admin.py  apps.py  auth_apikey.py  backends.py  signals.py  tasks.py
(+129 files in other folders)
